fix a bug that cause img too big.

--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,12 @@ body {
   align-items: center;
   justify-content: center;
   height: 300px;
+  width: 400px;
+}
+
+.product-image img {
+  max-width: 100%;
+  height: auto;
 }
 
 /* Product details panel */
